# basic-server

./: .gitignore  CMakeLists.txt  README.md  logs.ps1  monitor.ps1  restart.ps1
src/: game_simulation.hpp  game_state.hpp  input_state.hpp  network_layer.hpp  server_main.cpp
